Use app_identity API to retrieve application hostname

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,13 +14,13 @@
   &#125;</code></p>
   <p>OAuth Endpoint:<p>
   <ul>
-    <li><strong>Getting a Request Token</strong>:<br /><code>https://oauth-profile.appspot.com/_ah/OAuthGetRequestToken</code></li>
-    <li><strong>Redirecting a User to Authorize</strong>:<br /><code>https://oauth-profile.appspot.com/_ah/OAuthAuthorizeToken</code></li>
-    <li><strong>Getting an Access Token</strong>:<br /><code>https://oauth-profile.appspot.com/_ah/OAuthGetAccessToken</code></li>
+    <li><strong>Getting a Request Token</strong>:<br /><code>https://{{ hostname }}/_ah/OAuthGetRequestToken</code></li>
+    <li><strong>Redirecting a User to Authorize</strong>:<br /><code>https://{{ hostname }}/_ah/OAuthAuthorizeToken</code></li>
+    <li><strong>Getting an Access Token</strong>:<br /><code>https://{{ hostname }}/_ah/OAuthGetAccessToken</code></li>
   </ul>
   <p>Web Service Endpoint:<p>
   <ul>
-    <li><strong>Retrieving the User Information</strong>:<br /><code>https://oauth-profile.appspot.com/oauth/v1/userinfo</code></li>
+    <li><strong>Retrieving the User Information</strong>:<br /><code>https://{{ hostname }}/oauth/v1/userinfo</code></li>
   </ul>
   <p>Documentation:</p>
   <ul>
